# rust-remote-desktop

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  installer.iss  pubspec.yaml  run_local.sh
.github/workflows/: client.yml  dart.yml  flutter-windows.yml  rust.yml  server.yml
client/: .gitignore  pubspec.yaml
client/android/app/src/main/: AndroidManifest.xml
client/flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
client/flutter/config/: prod.json
client/flutter/integration_test/: simple_test.dart
client/flutter/lib/: main.dart
client/flutter/lib/src/features/file_transfer/: file_transfer_service.dart
client/flutter/lib/src/features/webrtc/: webrtc_manager.dart
client/flutter/lib/src/presentation/pages/: connection_pairing_page.dart  initiator_page.dart  responder_page.dart  welcome_screen.dart
client/flutter/lib/src/presentation/ui/: radius.dart  typography.dart  ui_config.dart
client/flutter/lib/src/presentation/widgets/: domain_config_dialog.dart  server_status_banner.dart  session_connection_badge.dart  session_file_transfer_sheet.dart  status_badge.dart
client/flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
client/flutter/lib/src/rust/shared/: models.dart
client/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
client/flutter/test/: widget_test.dart
client/lib/: main.dart
client/lib/src/features/file_transfer/: file_transfer_service.dart  file_transfer_widget.dart
client/lib/src/features/pairing/data/: connection_service.dart
client/lib/src/features/pairing/domain/: models.dart
client/lib/src/features/webrtc/: webrtc_manager.dart
client/lib/src/presentation/pages/: connection_pairing_page.dart  initiator_page.dart  responder_page.dart
client/lib/src/presentation/ui/: metrics.dart
client/lib/src/presentation/widgets/: app_button.dart  app_card.dart  app_ttl_timer.dart  session_file_transfer_sheet.dart  session_menu_overlay.dart  session_status_views.dart
client/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
client/lib/src/rust/api/: client.dart  models.dart  share.dart  transfer.dart
client/lib/src/signaling/: http_backend.dart
client/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/rust/: README.md
client/rust/crates/client-core/: Cargo.toml
client/rust/crates/client-core/src/: file_transfer.rs
client/rust/crates/mobile-bridge/: Cargo.toml
client/rust/crates/mobile-bridge/src/: frb_generated.rs  lib.rs
client/rust_builder/android/: build.gradle  settings.gradle
client/rust_builder/ios/: rust_lib_application.podspec
client/rust_builder/linux/: CMakeLists.txt
client/rust_builder/macos/: rust_lib_application.podspec
client/rust_builder/windows/: CMakeLists.txt
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
docs/: file-transfer-protocol-v1.md  system-architecture.xml  system_architecture.drawio
integration_test/: simple_test.dart
lib/: main.dart
lib/src/features/pairing/application/: pairing_controller.dart
lib/src/features/pairing/data/: connection_service.dart
lib/src/features/pairing/domain/: models.dart  signaling_backend.dart
lib/src/features/webrtc/: webrtc_manager.dart
lib/src/messaging/: http_queue_backend.dart  message_queue_backend.dart
lib/src/presentation/pages/: connection_pairing_page.dart  initiator_page.dart  pairing_page.dart  responder_page.dart
lib/src/presentation/widgets/: handshake_card.dart  kv_row.dart  room_info.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: connection.dart
lib/src/signaling/: http_backend.dart  signaling_client.dart
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: AWS_SETUP.md  Cargo.toml  Dockerfile  HTTPS_SETUP.md  create_security_groups.sh  push_to_ecr.sh  verify_aws_setup.py  verify_aws_setup.sh
rust/crates/client-core/: Cargo.toml
rust/crates/client-core/src/: file_transfer.rs
rust/crates/mobile-bridge/: Cargo.toml
rust/crates/mobile-bridge/src/: frb_generated.rs
rust/crates/mobile-bridge/src/api/: client.rs  connection.rs  mod.rs  models.rs  share.rs  simple.rs  transfer.rs
rust/crates/mobile-bridge/src/capture/: mod.rs
rust/crates/shared/: Cargo.toml
rust/crates/shared/src/: connection.rs  models.rs
rust/crates/signaling/: Cargo.toml
rust/crates/signaling/src/: config.rs  lib.rs  registry.rs  server.rs
rust/crates/signaling/src/repository/: mod.rs  redis_repository.rs  session_repository.rs
rust/crates/signaling/src/services/: rendezvous_service.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: client.rs  connection.rs  mod.rs  simple.rs  transfer.rs
rust/src/connection/: mod.rs
rust/src/repository/: session_repository.rs
rust/src/services/: file_transfer.rs  mod.rs  rendezvous_service.rs
rust/src/shared/: models.rs
rust/src/signaling/: config.rs  mod.rs  registry.rs  server.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_application.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_application.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: run_dev.sh
server/rust/: Cargo.toml  Dockerfile  README.md
server/rust/crates/signaling/: Cargo.toml
server/rust/crates/signaling/src/: config.rs  main.rs  registry.rs  server.rs
server/rust/crates/signaling/src/repository/: mod.rs
server/rust/crates/signaling/src/services/: mod.rs
shared/rust/: README.md
shared/rust/shared/: Cargo.toml
shared/rust/shared/src/: models.rs
test/: widget_test.dart
windows/flutter/: generated_plugins.cmake
(+15 files in other folders)
