[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/signaling",
    "crates/client-core",
    "crates/mobile-bridge",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
hex = "0.4.3"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
aes-gcm = "0.10.3"
rand = "0.9.2"
blake3 = "1.5.4"
webrtc = "0.11.0"
flutter_rust_bridge = "=2.11.1"