[workspace]
resolver = "2"
members = [
    "crates/signaling",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
base64 = "0.22.1"
