[package]
name = "client-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
webrtc = { workspace = true }
once_cell = "1.21.3"
