[package]
name = "rust_lib_application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
shared = { path = "../shared" }
client-core = { path = "../client-core" }
anyhow = { workspace = true }
flutter_rust_bridge = "=2.11.1"
tokio = { workspace = true, features = ["full"] }
webrtc = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
once_cell = "1.21.3"
