[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.7.5", features = ["macros", "ws"] }
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
password-hash = "0.5.0"
tower = { version = "0.5", features = ["util"] }
base64 = { workspace = true }
