[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
hex = "0.4.3"
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
aes-gcm = "0.10.3"
rand = "0.9.2"
